--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <body>
     <section class="container">
     <div class="head">
-        <img src="logo.png">
+        <img src="assets/images/logo.png">
         <a href="#"> Sign In</a>
     </div>
     </section>
     <section class="banner">
-        <img src="bgimage.jpg" class="fit">
+        <img src="assets/images/bgimage.jpg" class="fit">
         <div class="box">
             <div class="heading">
                 <h2>Unlimited movies, TV<br>shows, and more.</h2>
@@ -37,12 +37,12 @@
             <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
         </div>
         <div class="img">
-            <img src="imgs1.png">
+            <img src="assets/images/imgs1.png">
         </div>
     </section>
     <section class="section2">
         <div class="img">
-            <img src="imgs2.png">
+            <img src="assets/images/imgs2.png">
         </div>
         <div class="txt">
             <h1>Download your shows to watch offline.</h1>
@@ -55,12 +55,12 @@
             <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV without paying more.</p>
         </div>
         <div class="img">
-            <img src="imgs3.png">
+            <img src="assets/images/imgs3.png">
         </div>
     </section>
     <section class="section1">
         <div class="img">
-            <img src="imgs4.png">
+            <img src="assets/images/imgs4.png">
         </div>
         <div class="txt">
             <h1>Create profiles for kids.</h1>
